--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ colorama==0.4.6
 cryptography==44.0.2
 dropbox==12.0.2
 Flask==3.1.0
+flask-cors==5.0.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
