--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+attrs==25.3.0
 blinker==1.9.0
+Brotli==1.1.0
 certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.1
@@ -8,12 +13,18 @@ cryptography==44.0.2
 dropbox==12.0.2
 Flask==3.1.0
 flask-cors==5.0.1
+frozenlist==1.6.0
+g4f==0.5.3.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+multidict==6.4.4
+nest-asyncio==1.6.0
 ply==3.11
+propcache==0.3.1
 pycparser==2.22
+pycryptodome==3.23.0
 PyJWT==2.10.1
 python-dotenv==1.1.0
 requests==2.32.3
@@ -23,3 +34,4 @@ stone==3.3.1
 urllib3==2.4.0
 waitress==3.0.2
 Werkzeug==3.1.3
+yarl==1.20.0
